# Qt_QML_Felgo

./: .gitignore
Felgo/: Tổng kết khác.txt
Felgo/Felgo App/: Felgo App.txt
Felgo/Felgo App/PropertyCross App/: PropertyCrossApp.pro
QML/: Tổng kết module.txt  Tổng kết ngoài.txt
QML/Code QML Basic/QML Canvas/: CMakeLists.txt  main.cpp  main.qml  qml.qrc  quickclass.cpp  quickclass.h
QML/Code QML Basic/QML UI Form/: CMakeCache.txt.prev  CMakeLists.txt  Erase.qml  Item1Form.ui.qml  main.qml  qml.qrc
QML/Code QML Basic/State + Animation/: AnimationItem.qml  CMakeLists.txt  main.qml  qml.qrc
QML/Code QML Basic/TapHandler/: CMakeLists.txt  main.qml
Qt/: (bản cũ)Module OpenSSL Doxygen.txt  (bản cũ)Module TCP.txt  (bản cũ)Module Tor.txt  (bản cũ)Module XML.txt  (bản cũ)Module concurrency.txt  (bản cũ)Module hook.txt  (bản cũ)Module multimedia.txt  (bản cũ)Module mã hóa.txt  (bản cũ)Module pro file và qmake.txt  (bản cũ)Module static and dll lib.txt  (bản cũ)Module test.txt  (bản cũ)Module wifi.txt  (bản cũ)Module winadmin.txt  (bản cũ)Module window service.txt  (bản cũ)Module zip.txt  Module encode và decode(bản mới).txt  Module pro file và qmake.txt  Tổng kết khác.txt  Tổng kết module 2 - bản Qt mới.txt  Tổng kết module.txt  Tổng kết ngoài luồng.txt  Tổng kết ngoài.txt
Qt/Code Qt5/Access XML via DOM/: Kiên thức và chú thích.txt  Kiến thức .txt
Qt/Code Qt5/App chat client server/: plan.txt
Qt/Code Qt5/App quản lý Plugin/: plan.txt
Qt/Code Qt5/App quản lý sinh viên/: plan.txt
Qt/Qt5/AAATraining/Qt C++/OpenSSL Cryptography tự làm/: CMakeLists.txt  crypto.h
(+544 files in other folders)
